Added formspree to contact form

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,10 @@
     <div class="container-sm">
         <p>We love to create dependable business solutions for small and medium sized companies
             . Email our office using contact@website.com or call us using +123-456-7890 </p>
-    <form>
+        <form
+        action="https://formspree.io/f/xzzprwqr"
+        method="POST"
+        >        
         <input type="text" name ="name" placeholder="Name ">
         <input type="email" name = "email" placeholder="Email">
         <textarea name="message" placeholder=""Message></textarea>
