--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="/" aria-label="Logo Home Link"><img src="images/logo.svg" alt="Tutor Logo"></a>
         <div class="main-menu-items">
             <ul class="main-menu-list">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#chapters">Chapters</a></li>
                 <li><a href="#summary">Summary</a></li>
                 <li><a href="#takeaways">Takeaways</a></li>
@@ -47,7 +47,7 @@
             <!-- Mobile menu items -->
             <div  id = "mobile-menu-items" class="mobile-menu-items">
                 <ul class="mobile-menu-list">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#chapters">Chapters</a></li>
                     <li><a href="#summary">Summary</a></li>
                     <li><a href="#takeaways">Takeaways</a></li>
